--- a/pravah/pubspec.yaml
+++ b/pravah/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_storage: ^12.4.2
   cloud_firestore: ^5.6.3
   google_fonts: ^6.2.1
+  loading_indicator: ^3.1.1
 
 dev_dependencies:
   flutter_test:
