--- a/pravah/pubspec.yaml
+++ b/pravah/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_fonts: ^6.2.1
   loading_indicator: ^3.1.1
   flutter_dotenv: ^5.2.1
+  flutter_gemini: ^3.0.0
 
 dev_dependencies:
   flutter_test:
