--- a/pravah/pubspec.yaml
+++ b/pravah/pubspec.yaml
@@ -42,6 +42,22 @@ dependencies:
   loading_indicator: ^3.1.1
   flutter_dotenv: ^5.2.1
   flutter_gemini: ^3.0.0
+  location: ^8.0.0
+  uuid: ^4.5.1
+  google_maps_flutter: ^2.11.0
+  image_picker: ^1.1.2
+  google_gemini: ^0.1.2
+  image: ^4.5.3
+  http: ^1.3.0
+  google_maps_widget: ^1.0.6
+  map_picker: ^0.0.3
+  geolocator: ^13.0.3
+  google_places_flutter: ^2.1.0
+  path_provider_android: ^2.2.16
+  font_awesome_icon_class: ^0.0.6
+  intl: ^0.20.2
+  fl_chart: ^0.70.2
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
