--- a/pravah/pubspec.yaml
+++ b/pravah/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   intl: ^0.20.2
   fl_chart: ^0.70.2
   shared_preferences: ^2.5.2
+  google_generative_ai: ^0.4.6
+  provider: ^6.1.4
 
 dev_dependencies:
   flutter_test:
