--- a/pravah/android/app/src/main/AndroidManifest.xml
+++ b/pravah/android/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCIze-Sr9XNVQ8IJuqwr2izyN1JWhfjsyY"/>
+            android:value="YOUR_GOOGLE_MAP_API_KEY"/>
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
